kubernetes/booksService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-backend
spec:
  selector:
    matchLabels:
      name: books-backend
  template:
    metadata:
      labels:
        name: books-backend
    spec:
      containers:
      - name: books-backend-service
        imagePullPolicy: Always
        image: eldimious/books:latest
        ports:
          - containerPort: 5000
