kubernetes/booksService/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: books-backend
