kubernetes/booksService/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tf-tutorial
  labels:
    app: books-service
  name: books-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    name: books-backend
